<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/cardview_dark_background"
    android:background="@drawable/yugiohscreensaver"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image_welcome"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="Welcome image"
        android:transitionName="logo_image_welcome"
        app:srcCompat="@drawable/nerdmarket_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"
        android:textColor="#ffffff">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="#99000000"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="First Name:"
            android:textSize="20dp"
            android:textColor="#ffffff">
        </TextView>

        <EditText
            android:id="@+id/signup_firstname"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="50dp"
            android:hint="                                    ">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#99000000"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Last Name: "
            android:textSize="20dp"
            android:textColor="#ffffff">
        </TextView>

        <EditText
            android:id="@+id/signup_lastname"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="50dp"
            android:hint="                                    ">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="#99000000"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email:           "
            android:textSize="20dp"
            android:textColor="#ffffff">
        </TextView>

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="50dp"
            android:hint="                                    ">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99000000"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Username: "
            android:textSize="20dp"
            android:textColor="#ffffff">
        </TextView>

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="50dp"
            android:hint="                                    ">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#99000000"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*Password: "
            android:textSize="20sp"
            android:textColor="#ffffff"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            app:endIconTint="#ffffff">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#ffffff"
                android:hint="8 chars + symbol"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_account_btn"
            android:layout_width="292dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="#3AA6ff"
            android:text="Create Account"
            android:textSize="20dp"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/back_to_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:textSize="17dp"
            android:background="#3AA6ff"
            android:elevation="0dp"
            android:text="Back To Login"
            android:textColor="#ffffff" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>