<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/logo_image_main"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:transitionName="logo_image_welcome"
            android:src="@drawable/pngimg_com___glasses_png54332" />

        <TextView
            android:id="@+id/userPage_username_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="{{username}}"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="1dp"
            android:layout_centerHorizontal="true"
            android:textSize="30dp"
            android:textColor="#ffffff">
        </TextView>

        <ImageButton
            android:id="@+id/userPage_dropdown_btn"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_menu_24" />

    </RelativeLayout>

    <Button
        android:id="@+id/userPage_back_to_login_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Sign out"
        android:textSize="20sp"
        android:textColor="#ffffff">
    </Button>

    <Button
        android:id="@+id/userPage_to_notifs_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Notifications"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/userPage_back_to_signup_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Make a new account"
        android:textSize="20sp"
        android:textColor="#ffffff">
    </Button>

    <Button
        android:id="@+id/userPage_to_admin_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Admin View"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/userPage_delete_account_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Delete Account"
        android:textSize="20sp"
        android:textColor="#ffffff">
    </Button>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp">

        <ImageButton
            android:id="@+id/userPage_toPortfolio_image"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/business_center_24px" />

        <ImageButton
            android:id="@+id/userPage_home_image"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_marginStart="10dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/baseline_home_24" />

        <ImageButton
            android:id="@+id/userPage_toSearch_image"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/search_24px" />

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>