<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:background="@drawable/yugiohscreensaver"
    android:backgroundTintMode="multiply"
    android:backgroundTint="@color/cardview_dark_background"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image_welcome"
        android:layout_marginTop="40dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="Welcome image"
        android:transitionName="logo_image_welcome"
        app:srcCompat="@drawable/nerdmarket_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome Back"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"
        android:textColor="#ffffff">
    </TextView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:background="#99000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="User/Email: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/login_username"
            android:layout_width="wrap_content"
            android:textColor="#ffffff"
            android:layout_height="50dp"
            android:hint="Enter Username Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="#99000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password: "
            android:textSize="20dp"
            android:textColor="#FFFFFF">
        </TextView>

        <EditText
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:inputType="textPassword"
            android:textColor="#ffffff"
            android:layout_height="50dp"
            android:hint="Enter Password Here">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_go_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="17dp"
            android:background="@drawable/gradient_background_lowopac"
            android:text="GO"
            android:textColor="#fff" />

        <Button
            android:id="@+id/login_signup_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="@drawable/gradient_background_lowopac"
            android:elevation="0dp"
            android:text="New User? SIGN UP"
            android:textColor="#ffffff"
            android:textSize="17dp"/>

    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>